# lab05

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  hello_world.cpp  input.txt
.github/workflows/: cmake.yml  linux.yml  windows.yml
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  cmake_install.cmake
_build/formatter_ex_lib/: Makefile  cmake_install.cmake
_build/formatter_lib/: Makefile  cmake_install.cmake
_build/hello_world_application/: Makefile  cmake_install.cmake  hello_world
_build/solver_application/: Makefile  cmake_install.cmake  solver
_build/solver_lib/: Makefile  cmake_install.cmake
banking/: Account.cpp  Account.h  Transaction.cpp  Transaction.h
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/include/: formatter_ex.h
formatter_ex_lib/sources/: formatter_ex.cpp
formatter_lib/: CMakeLists.txt
formatter_lib/include/: formatter.h
formatter_lib/sources/: formatter.cpp
hello_world_application/: CMakeLists.txt  main.cpp
solver_application/: CMakeLists.txt  main.cpp
solver_lib/: CMakeLists.txt
solver_lib/include/: solver.h
solver_lib/sources/: solver.cpp
tests/: test1.cpp  test_banking.cpp
